prevent word break on hyphened user title

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1060,3 +1060,5 @@ a.has-text-link
   border-left-width: 0
   border-right-width: 0
   border-top-width: 0
+.dont-break
+  white-space: nowrap
